fix: Fix backend vocab schema field "occurences"
