# backend/Koine.Application/DTOs/Vocabulary/SimpleWordDto.cs
@@ -7,8 +7,8 @@ namespace Koine.Application.DTOs.Vocabulary
     {
         public Guid RootGUID { get; set; }
         public int RootId { get; set; }
-        public string Content { get; set; }
-        public int Occurances { get; set; }
+        public string Content { get; set; } = string.Empty;
+        public int Occurrences { get; set; }
         public string? Gloss { get; set; }
     }
 }
